--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "homepage": "https://github.com/goodby/ddd",
     "license": "MIT",
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.4.0",
+        "goodby/event-sourcing": "dev-master",
+        "goodby/assertion": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
